fixed burger menu in high contrast and text sizing positioning

--- a/src/index.css
+++ b/src/index.css
@@ -145,10 +145,6 @@ nav {
   min-height: 60vh;
 }
 
-:root[data-theme="light"] .nav-toggle {
-  color: #111827;
-}
-
 :root[data-font-size="75%"] {
   font-size: 14px;
 }
@@ -169,6 +165,10 @@ nav {
   font-size: 32px;
 }
 
+.text-sizing {
+justify-content: center;
+}
+
 :root[data-theme="dark"] {
   --panel-color: #36383d;
   --sidebar-color: #111;
@@ -181,11 +181,19 @@ nav {
   --sidebar-color: #d1d5db;
 }
 
+:root[data-theme="light"] .nav-toggle {
+  color: #111827;
+}
+
 :root[data-theme="contrast"] {
   --bg-color: #000000;
   --text-color: #ffff00;
   --panel-color: #000000;
   --sidebar-color: #000000;
+}
+
+:root[data-theme="contrast"] .nav-toggle {
+  color: #ffff00;
 }
 
 .theme-buttons {
